2004-01-14  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* esd.c: Fix build on AIX. Patch from
        Albert Chin-A-Young <china@thewrittenword.com>.

2004-01-14  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* audio_osf.c: Fix build on OSF. Patch from 
	Albert Chin-A-Young <china@thewrittenword.com>.

2004-01-14  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* autogen.sh:
	Don't force automake 1.4, now that we support 1.7.
	Fix url for various tools.

	* Makefile.am:
	Fix build with automake 1.7 (Patch from Thomas Cataldo
	<tom@aliacom.fr>).

2003-10-10  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* esound.pc.in: Add missing sound-libs param.
	Fix for Darwin and osf, from Jerry Talkington
	<jtalkington@users.sourceforge.net> 

2003-09-22  Kjartan Maraas  <kmaraas@gnome.org>

	* docs/esd.1.in: Fix a small typo in the man page.

2003-09-03  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* esd.c: (open_listen_socket):
	Fix build when IPv6 is disabled (Soren Jacobsen <snj@pobox.com>)

2003-08-30  Dan Winship  <danw@ximian.com>

	* Makefile.am (AUDIO_BACKENDS): add several missing backends that
	weren't getting disted.

2003-08-11  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* configure.in: Release 0.2.31

2003-08-05  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* configure.in: Fix compilation on Solaris 8.
	bug #119092.

2003-08-01  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* NEWS:
	* configure.in: Release 0.2.30

2003-08-01  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* esd.c: Add missing prototype.

2003-08-01  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* acconfig.h:
	* configure.in:
	* esd.c:
	* esdlib.c:
	Use inet_pton instead of inet_aton which is a libresolv private symbol.
	Bug #117559, patch from Leena Gunda <leena.gunda@wipro.com>.

2003-08-01  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* esd.c: (set_audio_buffer), (reset_daemon), (clean_exit),
	(esd_server_resume), (main):
	* esd.h:
	* esd_config.c:
	* esdcat.c: