@@ -8,6 +8,7 @@
 #undef DRIVER_ALSA
 #undef DRIVER_NEWALSA
 #undef DRIVER_ALSA_09
+#undef DRIVER_ALSA_09_NEW_PCM_API
 #undef DRIVER_DART
 #undef DRIVER_COREAUDIO
 #undef DRIVER_NONE
