@@ -1,3 +1,11 @@
+2004-01-15  Frederic Crozat  <fcrozat@mandrakesoft.com>
+
+	* acconfig.h:
+	* audio_alsa09.c:
+	* configure.in: Use new ALSA PCM API if available 
+	(fixes from Lukasz Mach <lukasz@mach.com.pl> and 
+	Eddy Mulyono <eddymulyono@mail.com>)
+
 2004-01-14  Frederic Crozat  <fcrozat@mandrakesoft.com>
 
 	* esd.c: Fix build on AIX. Patch from
